nuke AtomSequencers get Site simulations working refactor PotentialMasterSite/Cell remove IteratorFactory subclasses (do we need this at all?)